2010-05-21  Tony Chang  <tony@chromium.org>

Reviewed by Ojan Vafai.

        [chromium] if keydown is prevented, don't update the IME and clear the IME state
        https://bugs.webkit.org/show_bug.cgi?id=39475

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::handleCompositionEvent):

Canonical link: https://commits.webkit.org/51132@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60054 268f45cc-cd09-0410-ab3c-d52691b4dbfc